correction white space

--- a/src/app/labels/labels.component.sass
+++ b/src/app/labels/labels.component.sass
@@ -11,6 +11,7 @@
 .text-container
     display: inline-block
     text-shadow: 1px 1px 2px white 
+    white-space: pre
 
 .music-logo
     margin: 0 5px
